[#48][#47] 채팅방 생성시 제목을 참가자 프로필 이름들로 변경, 개발환경일떄 csrf 토큰 비활성화 (#49)
* 개발 모드용 스프링 시큐리티를 설정하여 csrf 토큰을 해지시키는 설정을 추가함,

* V0.7__drop_name_from_chat_room.sql: 채팅방 테이블의 이름 컬럼 제거함

* 채팅방 제목을 참가자 프로필 정보를 바탕으로 변경할 수 있도록 수정함

* 친구 프로필 정보를 바꿨을떄 해당하는 채팅방 제목도 수정되도록 친구목록 업데이트